; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_tablet.c_handle_tablet_pad_attach.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_tablet.c_handle_tablet_pad_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_tablet_pad = type { i32 }
%struct.wl_listener = type { i32 }
%struct.wlr_tablet_tool = type { %struct.sway_tablet_tool* }
%struct.sway_tablet_tool = type { i32 }

@attach = common dso_local global i32 0, align 4
@pad = common dso_local global %struct.sway_tablet_pad* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @handle_tablet_pad_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_tablet_pad_attach(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_tablet_pad*, align 8
  %6 = alloca %struct.wlr_tablet_tool*, align 8
  %7 = alloca %struct.sway_tablet_tool*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %9 = load %struct.sway_tablet_pad*, %struct.sway_tablet_pad** %5, align 8
  %10 = ptrtoint %struct.sway_tablet_pad* %9 to i32
  %11 = load i32, i32* @attach, align 4
  %12 = call %struct.sway_tablet_pad* @wl_container_of(%struct.wl_listener* %8, i32 %10, i32 %11)
  store %struct.sway_tablet_pad* %12, %struct.sway_tablet_pad** %5, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = bitcast i8* %13 to %struct.wlr_tablet_tool*
  store %struct.wlr_tablet_tool* %14, %struct.wlr_tablet_tool** %6, align 8
  %15 = load %struct.wlr_tablet_tool*, %struct.wlr_tablet_tool** %6, align 8
  %16 = getelementptr inbounds %struct.wlr_tablet_tool, %struct.wlr_tablet_tool* %15, i32 0, i32 0
  %17 = load %struct.sway_tablet_tool*, %struct.sway_tablet_tool** %16, align 8
  store %struct.sway_tablet_tool* %17, %struct.sway_tablet_tool** %7, align 8
  %18 = load %struct.sway_tablet_tool*, %struct.sway_tablet_tool** %7, align 8
  %19 = icmp ne %struct.sway_tablet_tool* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %2
  br label %27

21:                                               ; preds = %2
  %22 = load %struct.sway_tablet_pad*, %struct.sway_tablet_pad** %5, align 8
  %23 = load %struct.sway_tablet_tool*, %struct.sway_tablet_tool** %7, align 8
  %24 = getelementptr inbounds %struct.sway_tablet_tool, %struct.sway_tablet_tool* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @attach_tablet_pad(%struct.sway_tablet_pad* %22, i32 %25)
  br label %27

27:                                               ; preds = %21, %20
  ret void
}

declare dso_local %struct.sway_tablet_pad* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @attach_tablet_pad(%struct.sway_tablet_pad*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
